--- a/index9.html
+++ b/index9.html
@@ -75,7 +75,7 @@
                 <!-- logo -->
                 <a class="navbar-brand" href="index.html">
                     <div id="logo">
-                        <img id="logo3" src="images/favicon-16x16.png" width="200%" alt="Rommelo">
+                            <img id="logo3" src="images/favicon-16x16.png" width="200%" height="200%" alt="Rommelo Technologies"><a href="" ><strong>Rommelo</strong></a>
                     </div>
                 </a>
                 <!-- /logo -->
