--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     .services p,
     li {
-      color: #767676;
+      color: #767676;<img id="logo3" src="images/favicon-16x16.png" width="200%" height="200%" alt="Rommelo Technologies"><a href="" ><strong>Rommelo</strong></a>
       font-size: 20px;
     }
   </style>
@@ -223,6 +223,7 @@
               <div><a href="index2.html"><button class="btn btn-readMore">Read More</button></a></div>
             </div>
             <div class="col-sm-6 text-center service-img">
+              <img src="images/electrical-electricity-energy-236089.jpg" alt="">
 
             </div>
           </div>
