--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     .services p,
     li {
-      color: #767676;<img id="logo3" src="images/favicon-16x16.png" width="200%" height="200%" alt="Rommelo Technologies"><a href="" ><strong>Rommelo</strong></a>
+      color: #767676;
       font-size: 20px;
     }
   </style>
@@ -220,10 +220,11 @@
                 Town along Thika road. We are an electrical contractor services company that is set to compete in
                 the highly competitive electrical contractor services industry not only in Kenya, but also throughout
                 Africa.</p>
-              <div><a href="index2.html"><button class="btn btn-readMore">Read More</button></a></div>
+              
             </div>
             <div class="col-sm-6 text-center service-img">
               <img src="images/electrical-electricity-energy-236089.jpg" alt="">
+              <div><a href="index2.html"><button class="btn btn-readMore">Read More</button></a></div>
 
             </div>
           </div>
