--- a/index2.html
+++ b/index2.html
@@ -250,24 +250,13 @@
         standards by meeting our client’s needs precisely and completely. We cultivate a working
         environment that provides a human, sustainable approach to earning a living, and living in our
         world, for all our partners, employees and for our clients.</p>
-
+        <img src="images/electrical-electricity-energy-236089.jpg" alt="">
 
     </div>
+    
 
   </div>
-  <section class="col-sm-12 clients-sec">
-    <div class="col-sm-10 col-sm-offset-1">
-      <div class="clients text-center">
-        <h2 class="clients-title">Clients</h2>
-        <div class="col-sm-12">
-          <img class="col-sm-3 partner img-responsive" src="./assets/img/clients/4.png">
-          <img class="col-sm-3 partner img-responsive" src="./assets/img/clients/3.jpg">
-          <img class="col-sm-3 partner img-responsive" src="./assets/img/clients/Telkom-Kenya-Logo.jpg">
-          <img class="col-sm-3 partner img-responsive" src="./assets/img/clients/airtel.png">
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
   <style type="text/css">
     .freebirdFormviewerViewFooterDisclaimer {
