--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/main.css">
   <link rel="stylesheet" href="./assets/css/slider.css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 
 
 
@@ -54,7 +55,7 @@
       width: 100%;
       height: 100%;
       z-index: 9999;
-      background: url(assets/gif/GIF.gif) center no-repeat #fff;
+      background: url(assets/gif/GIF.gif) center no-repeat rgb(255, 255, 255);
     }
   </style>
   <div class="se-pre-eeecon"></div>
