--- a/index4.html
+++ b/index4.html
@@ -135,13 +135,10 @@
     </div>
 
    
-    <!-- <div class="contact100-more">
-                <i class="zmdi zmdi-phone-in-talk"></i>
-                (+100) 345 6389
-            </div> -->
+   
     <div class="container text-center">
 
-        COMING SOON
+      <p style="font-size: 30px;">COMING SOON</p>
 
 
     </div>
