--- a/index9.html
+++ b/index9.html
@@ -144,7 +144,7 @@
     <div class="container text-center">
 
         <div class="col-xs-12 col-md-6">
-            <div class="box-model ">
+            <div class="box-model " style="font-size: 15px;">
                 <h1>Contact Information</h1>
                 <h2>POSTAL ADDRESS</h2>
                 <P>PO BOX 97-00618, RUARAKA</P>
@@ -170,9 +170,7 @@
     </div>
 
 
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script> -->
-
-    <!-- <script src="ContactForm/js/main.js"></script> -->
+    
     <style type="text/css">
         .freebirdFormviewerViewFooterDisclaimer {
             visibility: hidden !important;
