--- a/index5.html
+++ b/index5.html
@@ -240,6 +240,7 @@
       <p class="text-center" style="font-size: 15px;">We provide Operational, maintenance and support service in
         telecommunication and
         Power Industries for infrastructure and services</p>
+        <img src="images/backg.jpg" width="100%" alt="">
 
       <table style="font-size: 20px;">
         <tr>
