--- a/index5.html
+++ b/index5.html
@@ -13,15 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta
-    content="Rommelo Technologiesstrives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies."
-    name="description" />
-  <meta content="http://adriankenya.com//img/Security.jpg" property="og:image" />
-  <meta content="http://adriankenya.com/" property="og:url" />
-  <meta content="Rommelo Technologies" property="og:title" />
-  <meta
-    content="Rommelo Technologies strives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies." />
-  <link rel="shortcut icon" href="images/favicon-16x16.png">
+
 
   <!-- Bootstrap CSS -->
   <!-- Latest compiled and minified CSS -->
@@ -34,19 +26,13 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/main.css">
   <link rel="stylesheet" href="./assets/css/slider.css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+
 
 
 
   <title>ROMMELO TECHNOLOGIES</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84783047-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
 
-    gtag('config', 'UA-84783047-3');
-  </script>
 
 </head>
 
@@ -70,7 +56,7 @@
       width: 100%;
       height: 100%;
       z-index: 9999;
-      background: url(assets/gif/GIF.gif) center no-repeat #fff;
+      background: url(assets/gif/GIF.gif) center no-repeat rgb(255, 255, 255);
     }
   </style>
   <div class="se-pre-eeecon"></div>
@@ -91,9 +77,12 @@
         <!-- logo -->
         <a class="navbar-brand" href="index.html">
           <div id="logo">
-              <img id="logo3" src="images/favicon-16x16.png" width="200%" height="200%" alt="Rommelo Technologies">
+            <img id="logo3" src="images/favicon-16x16.png" width="200%" height="200%" alt="Rommelo Technologies">
           </div>
         </a>
+
+
+
         <!-- /logo -->
       </div>
 
@@ -103,17 +92,16 @@
           <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-              aria-expanded="false">About <span class="caret"></span></a>
+              aria-expanded="false">About <span class="caret" aria-colcount="true"></span></a>
             <ul class="dropdown-menu">
               <li><a href="index1.html">Who We Are</a></li>
               <li><a href="index3.html">Organization</a></li>
-              <li><a href="gallery.php">Gallery</a></li>
-              <!--                             <li><a href="downloads.php">Downloads</a></li>
- -->
+              <li><a href="index4.html">Gallery</a></li>
+
             </ul>
           </li>
 
-          <li><a href="contact-us.php">Contacts</a></li>
+          <li><a href="index9.html">Contacts</a></li>
         </ul>
       </nav>
       <!-- /main nav -->
@@ -228,7 +216,7 @@
   <div class="col-sm-12">
     <div class="row redLine">
       <div class="col-sm-8 col-sm-offset-2 ">
-        <img src="./assets/img/info-graphics/MS-01.png">
+        <img src="images/process.png">
       </div>
     </div>
   </div>
@@ -240,7 +228,7 @@
       <p class="text-center" style="font-size: 15px;">We provide Operational, maintenance and support service in
         telecommunication and
         Power Industries for infrastructure and services</p>
-        <img src="images/backg.jpg" width="100%" alt="">
+      <img src="images/backg.jpg" width="50%" alt="">
 
       <table style="font-size: 20px;">
         <tr>
@@ -404,7 +392,7 @@
       opacity: 1;
     }
   </style>
-  <footer class="footer">
+   <footer class="footer">
     <section class="col-sm-12 footer">
       <div class="container">
         <div class="text-center">
@@ -443,10 +431,9 @@
       background-color: greenyellow;
     }
   </style>
+  </style>
 
 
-  <script
-    type="text/javascript">window.$crisp = []; window.CRISP_WEBSITE_ID = "474f8f2a-7c74-4912-8b25-2722a7654e62"; (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();</script>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
