--- a/index5.html
+++ b/index5.html
@@ -225,10 +225,11 @@
   <div class="col-sm-12">
     <div class="container">
       <h2 class="text-center title" style="padding-bottom: 10px">Projects Undertaken</h2>
-      <p class="text-center" style="font-size: 15px;">We provide Operational, maintenance and support service in
+      
+      <img src="images/backg.jpg" width="50%" alt="">
+      <p class="text-left" style="font-size: 20px;" >We provide Operational, maintenance and support service in
         telecommunication and
         Power Industries for infrastructure and services</p>
-      <img src="images/backg.jpg" width="50%" alt="">
 
       <table style="font-size: 20px;">
         <tr>
