--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         ==================================== -->
   <header id="navigation" class="navbar-fixed-top navbar">
     <div class="container">
-      <div class="navbar-header">
+      <div class=" nav navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
