--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- logo -->
         <a class="navbar-brand" href="index.html">
           <div id="logo">
-            <img id="logo3" src="images/favicon-16x16.png" width="200%" height="200%" alt="Rommelo Technologies">
+            <img id="logo3" src="images/favicon-16x16.png" width="100%" height="200%" alt="Rommelo Technologies">
           </div>
         </a>
 
@@ -118,13 +118,13 @@
       width: 100%
     }
   </style>
-  <div class="home">
+  <!-- <div class="home">
     <video autoplay muted loop id="myVideo">
       <source src="images/video.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
 
-  </div>
+  </div> -->
 
   <style type="text/css">
     .redLine {
@@ -325,9 +325,7 @@
           <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
             RUARAKA.
           </p>
-          <p>Office Tel: +254 722 343243;</p>
-          <p>REGISTRATION NUMBER: PVT/2016/008776</p>
-          <p>KRA PIN NUMBER: P051588135Z</p>
+          <p>Office Tel: +254 722 343243;</p>          
           <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
           <p>Email: rommelotechnologies@gmail.com</p>
           <div>
