--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 </head>
 
 <body>
+    <style type="text/css">
+      .no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url(assets/gif/GIF.gif) center no-repeat #fff;
+}
+  </style>
   <style type="text/css">
     .no-js #loader {
       display: none;
