--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       width: 100%;
       height: 100%;
       z-index: 9999;
-      background: url(assets/gif/GIF.gif) center no-repeat rgb(141, 214, 6);
+      background: url(assets/gif/GIF.gif) center no-repeat rgb(255, 255, 255);
     }
   </style>
   <div class="se-pre-eeecon"></div>
@@ -119,13 +119,13 @@
       width: 100%
     }
   </style>
-  <!-- <div class="home">
+  <div class="home">
     <video autoplay muted loop id="myVideo">
       <source src="images/video.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
 
-  </div> -->
+  </div>
 
   <style type="text/css">
     .redLine {
