--- a/index.html
+++ b/index.html
@@ -89,27 +89,22 @@
 
       <!-- main nav -->
       <nav class="collapse navbar-collapse navbar-right" role="navigation">
-          <ul class="nav navbar-nav">
-              <li><a href="./">Home</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="whoweare.php">Who We Are</a></li>
-                  <li><a href="organization.php">Organization</a></li>
-                  <li><a href="gallery.php">Gallery</a></li>
-<!--                             <li><a href="downloads.php">Downloads</a></li>
--->                          </ul>
-              </li>
-              <li><a href="training.php">Training</a></li>
-              <li><a href="careers.php">Careers</a></li>
-              <li><a href="contact-us.php">Contacts</a></li>
-          </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+              aria-expanded="false">About <span class="caret" aria-colcount="true"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="index1.html">Who We Are</a></li>
+              <li><a href="index3.html">Organization</a></li>
+              <li><a href="index4.html">Gallery</a></li>
+
+            </ul>
+          </li>
+
+          <li><a href="index9.html">Contacts</a></li>
+        </ul>
       </nav>
-      <!-- /main nav -->
-      
-  </div>
-</header>
-<!--
       <!-- /main nav -->
 
     </div>
