--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
       </div>
 
       <!-- main nav -->
-      <nav class="collapse navbar-collapse navbar-right" role="navigation">
-        <ul class="nav navbar-nav">
+      <nav class="collapse navbar-collapse navbar-right hamburger" role="navigation">
+        <ul class="nav navbar-nav ">
           <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
               aria-expanded="false">About <span class="caret" aria-colcount="true"></span></a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu ">
               <li><a href="index1.html">Who We Are</a></li>
               <li><a href="index3.html">Organization</a></li>
               <li><a href="index4.html">Gallery</a></li>
