--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
 
       <!-- main nav -->
-      <nav class="collapse navbar-collapse navbar-right " role="navigation">
+      <nav class="collapse navbar-collapse navbar-right navbar-toggle" role="navigation">
         <ul class="nav navbar-nav ">
           <li><a href="index.html">Home</a></li>
           <li class="dropdown">
