--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  
+
   <style type="text/css">
     .no-js #loader {
       display: none;
@@ -67,12 +67,9 @@
   <header id="navigation" class="navbar-fixed-top navbar">
     <div class="container">
       <div class=" nav navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="navbar-toggler-icon"></span>>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
+          aria-label="Toggle navigation"><span class="dark-blue-text"><i class="fas fa-bars fa-1x"></i></span></button>
         <!-- /responsive nav button -->
 
         <!-- logo -->
@@ -224,13 +221,13 @@
                 Town along Thika road. We are an electrical contractor services company that is set to compete in
                 the highly competitive electrical contractor services industry not only in Kenya, but also throughout
                 Africa.</p>
-                <img src="images/electrical-electricity-energy-236089.jpg" width="80%" alt="">
+              <img src="images/electrical-electricity-energy-236089.jpg" width="80%" alt="">
               <div><a href="index2.html"><button class="btn btn-readMore">Read More</button></a></div>
 
             </div>
             <div class="col-sm-6 text-center service-img">
               <img src="images/backg1.jpg" width="60%" alt="">
-              
+
 
 
             </div>
@@ -256,7 +253,7 @@
 
             <p style="font-size:15px;">We commit ourselves in execution of our projects on time meeting all the quality
               standards requirements. Below are the contracts undertaken and completed in the last 12 months;</p>
-              <img src="images/backg.jpg" width="100%" alt="">
+            <img src="images/backg.jpg" width="100%" alt="">
             <div><a href="index5.html"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
         </div>
@@ -283,7 +280,7 @@
               legislation. Our Safety, Health and Welfare policy document, details our commitment to safeguard
               our personnel and third parties against accidents or incidents in and around the workplace. Within
               our SMS, emphasis is placed upon:</p>
-             
+
             <div><a href="index6.html"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
         </div>
@@ -326,7 +323,7 @@
           <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
             RUARAKA.
           </p>
-          <p>Office Tel: +254 722 343243;</p>          
+          <p>Office Tel: +254 722 343243;</p>
           <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
           <p>Email: rommelotechnologies@gmail.com</p>
           <div>
