add some changes

--- a/index.html
+++ b/index.html
@@ -2,113 +2,109 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="" />
-  <meta name="keywords" content="Telecommunication, Power & Energy, ICT" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="" />
+    <meta name="keywords" content="Telecommunication, Power & Energy, ICT" />
 
-  <meta name="author" content="Judi Chepkemoi Inc">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Judi Chepkemoi Inc">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    
 
-
-  <!-- Bootstrap CSS -->
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
-    integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
-  <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/animate.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <link rel="stylesheet" href="./assets/css/slider.css">
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-
+    <!-- Bootstrap CSS -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+        integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+    <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/slider.css">
 
 
 
-  <title>ROMMELO TECHNOLOGIES</title>
-
+    <title>ROMMELO TECHNOLOGIES</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    
 
 </head>
 
 <body>
-  
-  <style type="text/css">
-    .no-js #loader {
-      display: none;
-    }
+    <style type="text/css">
+        .no-js #loader {
+            display: none;
+        }
 
-    .js #loader {
-      display: block;
-      position: absolute;
-      left: 100px;
-      top: 0;
-    }
+        .js #loader {
+            display: block;
+            position: absolute;
+            left: 100px;
+            top: 0;
+        }
 
-    .se-pre-con {
-      position: fixed;
-      left: 0px;
-      top: 0px;
-      width: 100%;
-      height: 100%;
-      z-index: 9999;
-      background: url(assets/gif/GIF.gif) center no-repeat rgb(255, 255, 255);
-    }
-  </style>
-  <div class="se-pre-eeecon"></div>
-  <!-- 
+        .se-pre-con {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background: url(assets/gif/GIF.gif) center no-repeat #fff;
+        }
+    </style>
+    <div class="se-pre-eeecon"></div>
+    <!-- 
         Fixed Navigation
         ==================================== -->
-  <header id="navigation" class="navbar-fixed-top navbar">
-    <div class="container">
-      <div class=" nav navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <!-- /responsive nav button -->
+    <header id="navigation" class="navbar-fixed-top navbar">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class=" navbar-toggler-icon sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- /responsive nav button -->
 
-        <!-- logo -->
-        <a class="navbar-brand" href="index.html">
-          <div id="logo">
-            <img id="logo3" src="images/favicon-16x16.png" width="100%" height="200%" alt="Rommelo Technologies">
-          </div>
-        </a>
+                <!-- logo -->
+                <a class="navbar-brand" href="index.html">
+                    <div id="logo">
+                            <img id="logo3" src="images/favicon-16x16.png" width="200%" height="200%" alt="Rommelo Technologies">
+                    </div>
+                </a>
+                <!-- /logo -->
+            </div>
 
+            <!-- main nav -->
+            <nav class="collapse navbar-collapse navbar-right" role="navigation">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                            aria-expanded="false">About <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="index1.html">Who We Are</a></li>
+                            <li><a href="index3.html">Organization</a></li>
+                            <li><a href="index4.html">Gallery</a></li>
+                            <!--                             <li><a href="downloads.php">Downloads</a></li>
+ -->
+                        </ul>
+                    </li>
 
+                    <li><a href="index9.html">Contacts</a></li>
+                </ul>
+            </nav>
+            <!-- /main nav -->
 
-        <!-- /logo -->
-      </div>
-
-      <!-- main nav -->
-      <nav class="collapse navbar-collapse navbar-right" role="navigation">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-              aria-expanded="false">About <span class="caret" aria-colcount="true"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="index1.html">Who We Are</a></li>
-              <li><a href="index3.html">Organization</a></li>
-              <li><a href="index4.html">Gallery</a></li>
-
-            </ul>
-          </li>
-
-          <li><a href="index9.html">Contacts</a></li>
-        </ul>
-      </nav>
-      <!-- /main nav -->
-
-    </div>
-  </header>
+        </div>
+    </header>
   <!--
         End Fixed Navigation
         ==================================== -->
