--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggler-icon" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class=" navbar-toggler-icon sr-only">Toggle navigation</span>
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
