--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <header id="navigation" class="navbar-fixed-top navbar">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggler-icon" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
