--- a/index3.html
+++ b/index3.html
@@ -130,7 +130,7 @@
         }
       }
     </style>
-    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="900">
+    <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
