--- a/index5.html
+++ b/index5.html
@@ -490,7 +490,7 @@
   <style>
     .footer {
       background-color: #062F4F;
-      color: #000;
+      color:white;
     }
   </style>
   </style>
