--- a/index6.html
+++ b/index6.html
@@ -370,7 +370,7 @@
     <style>
         .footer {
             background-color: #062F4F;
-            color: #000;
+            color: white;
         }
     </style>
 
