--- a/index7.html
+++ b/index7.html
@@ -414,7 +414,7 @@
     <style>
         .footer {
             background-color: #062F4F;
-            color: #000;
+            color: white;
         }
     </style>
 
