--- a/index9.html
+++ b/index9.html
@@ -301,7 +301,7 @@
     <style>
         .footer {
             background-color: #062F4F;
-            color: #000;
+            color: white;
         }
     </style>
 
