--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!doctype html>
 <html lang="en">
 
 <head>
@@ -29,7 +29,6 @@
 
 
 
-
   <title>ROMMELO TECHNOLOGIES</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
@@ -38,32 +37,10 @@
 
 <body>
 
-  <style type="text/css">
-    .no-js #loader {
-      display: none;
-    }
-
-    .js #loader {
-      display: block;
-      position: absolute;
-      left: 100px;
-      top: 0;
-    }
-
-    .se-pre-con {
-      position: fixed;
-      left: 0px;
-      top: 0px;
-      width: 100%;
-      height: 100%;
-      z-index: 9999;
-      background: url(assets/gif/GIF.gif) center no-repeat #fff;
-    }
-  </style>
 
   <!-- 
-      Fixed Navigation
-      ==================================== -->
+        Fixed Navigation
+        ==================================== -->
   <header id="navigation" class="navbar-fixed-top navbar">
 
     <style>
@@ -384,7 +361,7 @@
   <style>
     .footer {
       background-color: #062F4F;
-      color:white;
+      color: white;
     }
   </style>
 
