--- a/index7.html
+++ b/index7.html
@@ -26,7 +26,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/slider.css">
-
+    <link rel="icon" href="images/favicon-16x16.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/favicon-16x16.png" type="image/x-icon"/>
 
 
 
