--- a/index2.html
+++ b/index2.html
@@ -41,9 +41,32 @@
 <body>
 
 
+  <style type="text/css">
+    .no-js #loader {
+      display: none;
+    }
+
+    .js #loader {
+      display: block;
+      position: absolute;
+      left: 100px;
+      top: 0;
+    }
+
+    .se-pre-con {
+      position: fixed;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      background: url(assets/gif/GIF.gif) center no-repeat #fff;
+    }
+  </style>
+
   <!-- 
-        Fixed Navigation
-        ==================================== -->
+      Fixed Navigation
+      ==================================== -->
   <header id="navigation" class="navbar-fixed-top navbar">
 
     <style>
@@ -143,11 +166,11 @@
           </ul>
 
 
-        </div>
+
     </nav>
     <!-- /main nav -->
 
-
+    </div>
   </header>
   <!--
         End Fixed Navigation
