--- a/index2.html
+++ b/index2.html
@@ -326,7 +326,7 @@
   </div>
 
 
-  <style type="text/css">
+  <!-- <style type="text/css">
     .freebirdFormviewerViewFooterDisclaimer {
       visibility: hidden !important;
     }
@@ -350,7 +350,7 @@
       color: #fff;
       opacity: 1;
     }
-  </style>
+  </style> -->
   <footer class="footer">
     <section class="col-sm-12 footer">
       <div class="container">
